# Minerva.Lite

./: .env  .gitignore  Cargo.toml  README.org  build.rs
proto/: minerva.proto
src/: client.rs  lib.rs  server.rs  service.rs
src/controller/: cliente.rs  mod.rs
src/model/: cliente.rs  mod.rs
src/service/: base.rs  clientes.rs  db.rs  mod.rs  utils.rs
