[package]
name = "minerva-lite"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
name = "liteserver"
path = "./src/server.rs"

[[bin]]
name = "liteclient"
path = "./src/client.rs"

[dependencies]
tonic = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.10"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rand = "0.8"
chrono = "0.4"
bb8 = "0.7.1"
bb8-diesel = "0.2.1"

[build-dependencies]
tonic-build = "0.7"
